--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,19 @@
 {
-  "require": {
-    "slim/slim": "^4.0",
-    "slim/psr7": "^1.4"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
+    "require": {
+        "slim/slim": "^4.0",
+        "slim/psr7": "^1.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "chmod +x vendor/bin/phpunit"
+        ]
     }
-  }
 }
