--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 		<!-- Add your project dependencies here -->
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
