--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   jenkins:
     build: .
-    container_name: jenkins-blueocean
+    container_name: jenkins-blueocean quiz
     restart: on-failure
     networks:
       - jenkins
@@ -25,13 +25,35 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: nginx
+    container_name: nginx quiz
     networks:
       - jenkins
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+
+  sonarqube:
+    image: sonarqube:latest
+    container_name: sonarqube quiz
+    networks:
+      - jenkins
+    ports:
+      - "9000:9000"
+    environment:
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONARQUBE_JDBC_USERNAME=sonar
+      - SONARQUBE_JDBC_PASSWORD=sonar
+
+  db:
+    image: postgres:latest
+    container_name: postgres
+    networks:
+      - jenkins
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonar
 
 networks:
   jenkins:
