--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   jenkins:
-    build: .
-    container_name: jenkins-blueocean quiz
+    image: myjenkins-blueocean:2.452.2-1
+    container_name: jenkins-blueocean-test
     restart: on-failure
     networks:
       - jenkins
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/host-services/docker.proxy.sock:/var/run/docker.sock
       - jenkins-data:/var/jenkins_home
       - jenkins-docker-certs:/certs/client:ro
     ports:
@@ -16,44 +16,25 @@ services:
       - "50000:50000"
     environment:
       JAVA_OPTS: "-Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true"
-    entrypoint: >
-      /bin/bash -c "
-      git config --global user.name 'Kingstonx3' &&
-      git config --global user.email 'kingstonx333333@hotmail.com' &&
-      /usr/local/bin/jenkins.sh
-      "
 
   nginx:
     image: nginx:latest
-    container_name: nginx quiz
+    container_name: nginx-test
     networks:
       - jenkins
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./public:/usr/share/nginx/html:ro 
 
   sonarqube:
-    image: sonarqube:latest
-    container_name: sonarqube quiz
+    image: sonarqube:latest 
+    container_name: sonarqube-test
     networks:
       - jenkins
     ports:
       - "9000:9000"
-    environment:
-      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
-      - SONARQUBE_JDBC_USERNAME=sonar
-      - SONARQUBE_JDBC_PASSWORD=sonar
-
-  db:
-    image: postgres:latest
-    container_name: postgres
-    networks:
-      - jenkins
-    environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
-      POSTGRES_DB: sonar
 
 networks:
   jenkins:
