--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,10 @@
 server {
     listen 80;
 
+    server_name 127.0.0.1;
+
     location /jenkins/ {
-        proxy_pass http://jenkins:8080/;
+        proxy_pass http://127.0.0.1:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -10,10 +12,16 @@ server {
     }
 
     location /sonarqube/ {
-        proxy_pass http://sonarqube:9000/;
+        proxy_pass http://127.0.0.1:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        root /usr/share/nginx/html;  # Adjust this to your webserver's document root
+        index index.html index.htm;
+        try_files $uri $uri/ =404;
     }
 }
